# vTriton

./: PROGRESS.md  PROJECT_FILE_REPORT.md
.omc/: prd.json  progress.txt
.omc/plans/: a3_progress.md  a6_2_blockers_scope.md  a6_2_counterfactual.md  a6_progress.md  a6_validation_harness.md  progress.txt
.omc/research/hw_runs/: RESULTS.md  counterfactual_results.json  multi_kernel_results.json
configs/: ascend_910b3.json
data/profile_utilization_inputs/: README.md  calib_fake_full.csv  calib_fake_full.json  des_fake.json  op_summary_fake.csv  profile_utilization_report.json
include/AscendModel/Transforms/: Passes.td
lib/AscendModel/Analysis/: HIVMAnalysis.cpp
lib/AscendModel/Transforms/: HIVMAnalysisPass.cpp  PipelineAnalysisPass.cpp
patches/: triton-ascend-compile-only-mock.patch  triton-ascend-llvm20-compat.patch
perfbound/: __init__.py
perfbound/calibration/: __init__.py  calib_loader.py  constants.py
perfbound/calibration/bench_output/: bandwidth_910b3.csv  cube_peak_bf16.csv  cube_peak_fp16.csv  cube_peak_int8.csv  mandatory_handoff_K1024.csv  mandatory_handoff_K128.csv  mandatory_handoff_K2048.csv  mandatory_handoff_K256.csv  mandatory_handoff_K384.csv  mandatory_handoff_K512.csv  mte_gm_to_l1.csv  mte_gm_to_ub.csv  mte_l1_to_l0a.csv  mte_ub_to_gm.csv  vector_peak_elemwise_add.csv  vector_peak_elemwise_max.csv  vector_peak_elemwise_min.csv  vector_peak_elemwise_mul.csv  vector_peak_transcendental.csv
perfbound/calibration/data/: calib_910b3_v1.json  vec_cycle_910b3.csv
perfbound/calibration/microbench/: CMakeLists.txt  README.md  bench_launcher.cpp  cube_peak_bf16.cce  cube_peak_fp16.cce  cube_peak_int8.cce  mandatory_handoff.cce  mte_gm_to_l1.cce  mte_gm_to_ub.cce  mte_l1_to_l0a.cce  mte_ub_to_gm.cce  vector_peak_elemwise_add.cce  vector_peak_elemwise_max.cce  vector_peak_elemwise_min.cce  vector_peak_elemwise_mul.cce  vector_peak_transcendental.cce  vt_microbench_common.h
perfbound/calibration/scripts/: __init__.py  cce_remote_bench.py  fit_constants.py  run_benchmarks.sh  validate_vs_tilesim.py
perfbound/combine/: __init__.py  bound_combiner.py  report.py  run_report.py  two_limit.py
perfbound/extract/: __init__.py  dsl_extractor.py  eligibility_oracle.py  grid_idioms.py  hivm_extractor.py  hivm_runner.py  op_classifier.py  semantic_extractor.py
perfbound/model/: __init__.py  bandwidth.py  component_model.py  grid_model.py  serialization.py
perfbound/validate/: __init__.py  correctness.py  counterfactual.py  harness.py  hivm_edits.py  msprof_parser.py
scripts/: apply_patches.sh  demo_profile_utilization.py  kernel_launcher.py  remote_bench.py
test/: vector_add_2x_bench.py
tests/perfbound/: __init__.py  test_calibration_extraction.py  test_calibration_load.py  test_calibration_wiring.py  test_chunk_kda_hw_validation.py  test_chunk_kda_milestone.py  test_component_model.py  test_correctness.py  test_counterfactual.py  test_counterfactual_fallback.py  test_eligibility_oracle.py  test_hivm_cli_integration.py  test_hivm_edits.py  test_hivm_extractor.py  test_kernel_launcher.py  test_microbench_sources.py  test_msprof_parser.py  test_remote_bench.py  test_report.py  test_report_measured.py  test_stage_b_stories.py  test_validation_harness.py
tests/perfbound/fixtures/: chunk_kda_op_summary_910b3.csv  op_summary_sample.csv  sample_hivm.json  vector_add_2x_op_summary_910b3.csv  vector_add_op_summary_910b3.csv
tests/perfbound/fixtures/profile_utilization/: test_results_1.json  test_results_2.json  verification_expected.json  verification_inputs.json
tools/: CMakeLists.txt
